force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>This object will track the life cycle of the applicant&apos;s job applications.</description>
    <label>Job Application</label>
    <nameField>
        <label>Job Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>