force-app/main/default/objects/Job_Application__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The company the applicant is applying to.</description>
    <label>Company Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>