force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>The position the applicant is applying for.</description>
    <label>Position</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>