force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This picklist field will track the current status of the job application. Options should include &apos;Saved&apos;, &apos;Applying&apos;, &apos;Applied&apos;, &apos;Interviewing&apos;, Negotiating, &apos;Accepted&apos;, and &apos;Closed&apos;.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
                <default>true</default>
                <label>Saved</label>
            </value>
            <value>
                <fullName>Applying</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>